--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -58,6 +58,8 @@
 
     {%- section 'inline-cart' -%}
 
+    {%- section 'modal' -%}
+
     {%- section 'topbar' -%}
 
     {%- section 'header' -%}
