--- a/src/snippets/api/css-variables.liquid
+++ b/src/snippets/api/css-variables.liquid
@@ -34,5 +34,13 @@
     --font-primary-bold-weight: {{ settings.font_primary_bold.weight }};
     --font-heading: {{ settings.font_heading.family }}, {{ settings.font_heading.fallback_families }};
     --font-heading-bold-weight: {{ settings.font_heading_bold.weight }};
+    --size-main-container: {{ settings.main_container_size }}px;
+    --size-spacing-base: {{ settings.base_spacing_size }}px;
+    --size-font-base: {{ settings.font_size_base }}px;
+    --size-font-minor: {{ settings.font_size_minor }}px;
+    --size-font-major: {{ settings.font_size_major }}px;
+    --size-font-super: {{ settings.font_size_super }}px;
+    --size-line-height-base: {{ settings.base_line_height }};
+    --duration-transition: {{ settings.transition_duration }}ms;
   }
 </style>
