--- a/src/snippets/static/inline-cart-line-item.liquid
+++ b/src/snippets/static/inline-cart-line-item.liquid
@@ -12,20 +12,13 @@
 
 {%- capture line_item_inline_cart_content -%}
 
-  {%- include 'button',
-    icon: 'cancel',
-    classes: 'button--reset',
-    attrs: 'data-remove-from-cart' -%}
-
   {%- capture href -%}
     href="{{ line_item.variant.url }}"
   {%- endcapture -%}
 
   {%- include 'image',
     resource: line_item,
-    size: '800x',
-    srcset: '480x,600x,768x,450x,575x',
-    sizes: 'max 480px 480px,max 600px 600px,max 768px 768px,max 992px 992px,min 993px 575px',
+    size: '80x',
     wrapper_tag: 'a',
     classes: 'oo-line-item--image-wrapper',
     attrs: href -%}
@@ -35,17 +28,22 @@
 
   <div class="oo-line-item--information-wrapper">
 
+    {%- include 'header',
+      title: line_item.product.title,
+      level: 3 -%}
+
+    {%- include 'price',
+      _price: line_item.price,
+      type: 'line_item.price' -%}
+
     {%- include 'button',
       content: 'remove',
       classes: 'text-link',
       attrs: 'data-remove-from-cart' -%}
 
-    {%- include 'header',
-      title: line_item.product.title,
-      level: 3,
-      content: line_item.product.vendor -%}
+  </div>
 
-    {%- include 'price', resource: line_item.variant -%}
+  <div class="oo-line-item--quantity">
 
     {%- include 'quantity-select', quantity: line_item.quantity -%}
 
