--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -28,7 +28,7 @@ h5,
 h6 {
   font-family: $font-heading;
   margin: 0;
-  margin-bottom: $oo-spacing-unit;
+  margin-bottom: $oo-base-spacing-size;
   color: $color-body-text;
 }
 
