--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -9,10 +9,10 @@
 
   $enable-box-sizing-border-box: true;
 
-  $oo-container-max: 1440px;
-  $oo-spacing-unit: 12px;
+  $oo-container-max: var(--size-main-container);
+  $oo-base-spacing-size: var(--size-spacing-base);
 
-  $oo-transition-duration: 300ms;
+  $oo-transition-duration: var(--duration-transition);
   $oo-transition-timing: ease-in-out;
 
 // ============================================================================
@@ -33,7 +33,6 @@
   $color-3: var(--color-palette-3);
   $color-4: var(--color-palette-4);
   $color-5: var(--color-palette-5);
-  $color-6: var(--color-palette-6);
 
   $color-body-text: var(--color-body-text);
   $color-body-background: var(--color-body-background);
@@ -53,11 +52,12 @@
   $font-primary-light-weight: var(--font-primary-light-weight);
   $font-primary-bold-weight: var(--font-primary-bold-weight);
 
-  $font-size-base:    16px;
-  $font-size-minor:   12px;
-  $font-size-major:   24px;
-  $font-size-super:   32px;
-  $font-line-height:  1.5;
+  $font-size-base:    var(--size-font-base);
+  $font-size-minor:   var(--size-font-minor);
+  $font-size-major:   var(--size-font-major);
+  $font-size-super:   var(--size-font-super);
+  $font-line-height:  var(--size-line-height);
+
 
 // =========================================================================
 //  __    __     ______
