--- a/src/scripts/components/Modal/styles.scss
+++ b/src/scripts/components/Modal/styles.scss
@@ -1,10 +1,21 @@
 $color-white: #ffffff !default;
+$oo-transition-duration: 300ms !default;
+$oo-transition-timing: linear !default;
 
 .oo-modal {
+  visibility: hidden;
+  opacity: 0;
   background-color: $color-white;
   position: fixed;
   top: 50%;
   left: 50%;
   z-index: 1001;
   transform: translate(-50%, -50%);
+  transition: visibility 0s $oo-transition-duration, opacity $oo-transition-duration $oo-transition-timing;
+
+  &.is-active {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity $oo-transition-duration $oo-transition-timing;
+  }
 }
