--- a/src/snippets/static/inline-cart-line-item.liquid
+++ b/src/snippets/static/inline-cart-line-item.liquid
@@ -38,7 +38,7 @@
 
     {%- include 'button',
       content: 'remove',
-      classes: 'text-link',
+      classes: 'button--text',
       attrs: 'data-remove-from-cart' -%}
 
   </div>
