--- a/src/snippets/static/inline-cart.liquid
+++ b/src/snippets/static/inline-cart.liquid
@@ -54,8 +54,9 @@
 
   {%- if inline_cart_button_one_enabled == true-%}
 
-    {%- include 'button',
+    {%- include 'link',
       content: inline_cart_button_one_text,
+      button: true,
       href: inline_cart_button_one_href,
       classes: inline_cart_button_one_classes -%}
 
@@ -64,8 +65,9 @@
 
   {%- if inline_cart_button_two_enabled == true -%}
 
-    {%- include 'button',
+    {%- include 'link',
       content: inline_cart_button_two_text,
+      button: true,
       href: inline_cart_button_two_href,
       classes: inline_cart_button_two_classes -%}
 
