--- a/src/sections/core/header.liquid
+++ b/src/sections/core/header.liquid
@@ -10,7 +10,9 @@
 
         {%- if block.settings.logo_svg_snippet != blank-%}
 
-          {%- include 'svg', snippet: block.settings.logo_svg_snippet -%}
+          {%- include 'svg',
+            snippet: block.settings.logo_svg_snippet,
+            classes: 'oo-header-logo' -%}
 
         {%- else -%}
 
@@ -18,19 +20,34 @@
             resource: block.settings.logo_image,
             size: block.settings.logo_image_size,
             srcset: block.settings.logo_image_srcset,
-            sizes: block.settings.logo_image_sizes -%}
+            sizes: block.settings.logo_image_sizes,
+            classes: 'oo-header-logo' -%}
 
         {%- endif -%}
 
       {%- when 'primary_navigaiton' -%}
 
-        {%- include 'primary-navigation',
+        {%- include 'header-primary-navigation',
           menu: block.settings.primary_navigation_linklist -%}
 
       {%- when 'secondary_navigaiton' -%}
 
-        {%- include 'secondary-navigation',
+        {%- include 'header-secondary-navigation',
           menu: block.settings.secondary_navigation_linklist -%}
+
+      {%- when 'cart' -%}
+
+        {%- include 'button',
+          icon: block.settings.cart_icon,
+          content: block.settings.cart_content,
+          classes: 'oo-header-cart' -%}
+
+      {%- when 'search' -%}
+
+        {%- include 'header-search',
+          icon: block.settings.search_icon,
+          placeholder: block.settings.placeholder_text,
+          classes: 'oo-header-search' -%}
 
     {%- endcase -%}
   {%- endfor -%}
@@ -79,6 +96,11 @@
             "type": "text",
             "id": "logo_image_sizes",
             "label": "sizes string (see image.liquid snippet for details)"
+          },
+          {
+            "type": "text",
+            "id": "logo_image_type",
+            "label": "Image type (e.g. 'pjpg')"
           }
         ]
       },
@@ -104,6 +126,43 @@
             "type": "link_list",
             "id": "secondary_navigation_linklist",
             "label": "Secondary Navigation Linklist"
+          }
+        ]
+      },
+      {
+        "name": "Cart",
+        "type": "cart",
+        "limit": 1,
+        "settings": [
+          {
+            "type": "text",
+            "id": "cart_icon",
+            "label": "Icon for Cart Menu",
+            "info": "write out the icon snippet name e.g. `icon-envelope`"
+          },
+          {
+            "type": "textarea",
+            "id": "cart_content",
+            "label": "Additional Content for Cart Menu"
+          }
+        ]
+      },
+      {
+        "name": "Search",
+        "type": "search",
+        "limit": 1,
+        "settings": [
+          {
+            "type": "text",
+            "id": "search_icon",
+            "label": "Icon for Search Button",
+            "info": "write out the icon snippet name e.g. `icon-envelope`"
+          },
+          {
+            "type": "text",
+            "id": "placeholder_text",
+            "label": "Search Input Placeholder Text",
+            "default": "Search"
           }
         ]
       }
