--- a/src/sections/core/hero.liquid
+++ b/src/sections/core/hero.liquid
@@ -54,7 +54,8 @@
           {
             "type": "text",
             "id": "classes",
-            "placeholder": "custom classes for slide element"
+            "label": "Classes",
+            "placeholder": "space-separated custom-class-names"
           },
           {
             "type": "header",
