--- a/src/snippets/components/button.liquid
+++ b/src/snippets/components/button.liquid
@@ -23,7 +23,9 @@
       classes: '',
       attrs: '' -%}
 
-  {%- else -%}
+  {%- endif -%}
+
+  {%- if content != blank -%}
 
     {{- content -}}
 
