--- a/src/snippets/templates/collection.liquid
+++ b/src/snippets/templates/collection.liquid
@@ -13,3 +13,11 @@
 
   {%- endunless -%}
 {%- endif -%}
+
+
+
+{%- for _product in collection.products -%}
+
+  {%- include 'product-item', _product: _product -%}
+
+{%- endfor -%}
